# ttMandelbrot

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  benchmark.sh  cpu.cpp  plot.py  utils.hpp
multi_core_nullary/: tt_multi_core_nullary.cpp
multi_core_nullary/kernel/: mandelbrot_compute.cpp  mendalbrot_compute.cpp  tile_write.cpp
single_core/: tt_single_core.cpp
single_core/kernel/: interleaved_tile_read.cpp  mandelbrot_compute.cpp  mendalbrot_compute.cpp  tile_write.cpp
single_core_nullary/: tt_single_core_nullary.cpp
single_core_nullary/kernel/: mandelbrot_compute.cpp  mendalbrot_compute.cpp
utils/: utils.hpp
